force-app/main/default/objects/WebCart/fields/PMC_DH_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>