force-app/main/default/objects/WebCart/fields/PMC_DH_B2B_B2C_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_B2B_B2C_INDICATOR__c</fullName>
    <formula>TEXT(PMC_DH_Account__r.PMC_SS_CustomerType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B_B2C_INDICATOR</label>
    <type>Text</type>
</CustomField>