force-app/main/default/objects/WebCart/fields/PMC_DH_Cart_Number__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Cart_Number__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Cart Number</label>
    <type>AutoNumber</type>
</CustomField>