force-app/main/default/objects/WebCart/fields/PMC_DH_CartItem_Count__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CartItem_Count__c</fullName>
    <label>CartItem Count</label>
    <summaryForeignKey>CartItem.CartId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>