force-app/main/default/objects/WebCart/fields/PMC_DH_CartReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CartReferenceNumber__c</fullName>
    <description>This web reference number will be used for SAP Scheduling table integration 
MD-{CartReferenceNumber}-{GroupNumber}-{ShipmentLineNumber}</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>SAP Interface 203 Cart Reference Number</inlineHelpText>
    <label>CartReferenceNumber</label>
    <type>AutoNumber</type>
</CustomField>