force-app/main/default/objects/WebCart/fields/PMC_DH_ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ContractStartDate__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>