force-app/main/default/objects/WebCart/fields/PMC_DH_Currency__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>