force-app/main/default/objects/WebCart/fields/PMC_DH_EMPTYCONST__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_EMPTYCONST__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>EMPTYCONST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>