force-app/main/default/objects/WebCart/fields/PMC_DH_IntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_IntegrationMessage__c</fullName>
    <description>Created as part of GDASF-6862. This field will capture the integration response message</description>
    <inlineHelpText>receives the Integration response message</inlineHelpText>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>