force-app/main/default/objects/WebCart/fields/PMC_DH_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>