force-app/main/default/objects/WebCart/fields/PMC_DH_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Open Credit</fullName>
            </value>
            <value>
                <fullName>Boletos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>