force-app/main/default/objects/WebCart/fields/PMC_DH_PrepaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PrepaymentDate__c</fullName>
    <label>Prepayment Date</label>
    <type>Date</type>
</CustomField>