force-app/main/default/objects/WebCart/fields/PMC_DH_PrimaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PrimaryBusinessType__c</fullName>
    <formula>IF(AND(!ISNULL(TEXT((PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c))),! ISBLANK(TEXT( PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c))),TEXT(PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Business Type</label>
    <type>Text</type>
</CustomField>