force-app/main/default/objects/WebCart/fields/PMC_DH_QuoteFriendlyName__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_QuoteFriendlyName__c</fullName>
    <label>Quote Friendly Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>