force-app/main/default/objects/WebCart/fields/PMC_DH_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>