force-app/main/default/objects/WebCart/fields/PMC_DH_SalesAgreementEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesAgreementEndDate__c</fullName>
    <formula>IF( PMC_DH_SalesAgreement__c!=NULL,  PMC_DH_SalesAgreement__r.EndDate ,  DATEVALUE( CreatedDate )   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement End Date</label>
    <type>Date</type>
</CustomField>