force-app/main/default/objects/WebCart/fields/PMC_DH_SalesAgreementStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesAgreementStartDate__c</fullName>
    <formula>IF(PMC_DH_SalesAgreement__c!=NULL, PMC_DH_SalesAgreement__r.StartDate,  DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement Start Date</label>
    <type>Date</type>
</CustomField>