force-app/main/default/objects/WebCart/fields/PMC_DH_SAP_CONSTANT__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAP_CONSTANT__c</fullName>
    <label>SAP CONSTANT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>