force-app/main/default/objects/WebCart/fields/PMC_DH_SCHED_AGREEMENT__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SCHED_AGREEMENT__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>SCHED AGREEMENT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>